--- a/package.json
+++ b/package.json
@@ -5,14 +5,18 @@
   "engines": {
     "node": "16.x"
   },
-  "main": "index.js",
+  "main": "dist/server.js",
   "scripts": {
-    "start": "node index.js",
+    "start": "node .",
+    "build": "tsc",
     "test": "node test.js"
   },
   "dependencies": {
+    "@types/ramda": "^0.28.14",
+    "boardgame.io": "^0.49.12",
     "ejs": "^3.1.5",
-    "express": "^4.15.2"
+    "ramda": "^0.28.0",
+    "typescript": "^4.7.4"
   },
   "devDependencies": {
     "got": "^11.3.0",
