--- a/package.json
+++ b/package.json
@@ -5,22 +5,51 @@
   "engines": {
     "node": "16.x"
   },
-  "main": "dist/server.js",
+  "main": "dist/server/index.js",
   "scripts": {
     "start": "node .",
     "build": "tsc",
-    "test": "node test.js"
+    "test": "node test.js",
+    "check": "tsc --noEmit"
   },
   "dependencies": {
+    "@rollup/plugin-commonjs": "^22.0.0",
+    "@rollup/plugin-json": "^4.1.0",
+    "@rollup/plugin-node-resolve": "^13.3.0",
+    "@rollup/plugin-typescript": "^8.3.3",
+    "@testing-library/react": "^12.1.5",
     "@types/ramda": "^0.28.14",
     "boardgame.io": "^0.49.12",
     "ejs": "^3.1.5",
+    "node-persist": "^3.1.0",
     "ramda": "^0.28.0",
-    "typescript": "^4.7.4"
+    "react": "^17.0.2",
+    "react-dom": "^17.0.2",
+    "rollup": "^2.75.6",
+    "rollup-plugin-styles": "^4.0.0",
+    "typescript": "^4.7.4",
+    "web-vitals": "^2.1.4"
   },
   "devDependencies": {
+    "@parcel/transformer-typescript-tsc": "^2.6.1",
+    "assert": "^2.0.0",
+    "browserify-zlib": "^0.2.0",
+    "buffer": "^6.0.3",
+    "crypto-browserify": "^3.12.0",
+    "events": "^3.3.0",
     "got": "^11.3.0",
-    "tape": "^4.7.0"
+    "https-browserify": "^1.0.0",
+    "os-browserify": "^0.3.0",
+    "parcel": "^2.6.1",
+    "path-browserify": "^1.0.1",
+    "process": "^0.11.10",
+    "querystring-es3": "^0.2.1",
+    "stream-browserify": "^3.0.0",
+    "stream-http": "^3.2.0",
+    "tape": "^4.7.0",
+    "tslib": "^2.4.0",
+    "url": "^0.11.0",
+    "util": "^0.12.4"
   },
   "repository": {
     "type": "git",
